--- a/react-hooks/package.json
+++ b/react-hooks/package.json
@@ -2,7 +2,7 @@
   "name": "react-hooks",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://maher-saleh.github.io/react/react-hooks",
+  "homepage": "https://maher-saleh.github.io/React-Hooks",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
